# library-management-system

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
data/: books.json  deleted_books.json
docs/: architecture.md  flow.md
src/library_manager/: __init__.py  cli.py  services.py  utils.py
tests/: test_cli.py  test_export.py  test_smoke.py
