[project]
name = "library-management-system"
version = "0.1.0"
description = "CLI perpustakaan (UX re-prompt & cancel=0) dengan export ringkasan & analytics (CSV/XLSX + chart)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "tabulate>=0.9",
  "matplotlib>=3.8",
  "openpyxl>=3.1",   # untuk export .xlsx
]

[project.scripts]
library-cli = "library_manager.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
